simple photo upload to parse with dummy data for some fields

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Elephant</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="buttonlabel_newphoto">New photo</string>
 
 </resources>
