--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,13 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="buttonlabel_newphoto">New photo</string>
+    <string name="buttonlabel_login">Log in</string>
+    <string name="buttonlabel_logout">Log out</string>
+    <string name="label_signuplink">Sign up</string>
+    <string name="test">weasdafa</string>
+    <string name="label_loginlink">Login now</string>
+    <string name="buttonlabel_signup">Sign up</string>
+    <string name="textfieldlabel_username">Username</string>
+    <string name="textfieldlabel_password">Password</string>
 
 </resources>
