--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,9 @@
     <string name="app_name">Elephant</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    
     <string name="buttonlabel_newphoto">New photo</string>
+    <string name="buttonlabel_refresh">Refresh</string>
     <string name="buttonlabel_login">Log in</string>
     <string name="buttonlabel_logout">Log out</string>
     <string name="buttonlabel_signup">Sign up</string>
@@ -14,5 +16,7 @@
 
     <string name="textfieldlabel_username">Username</string>
     <string name="textfieldlabel_password">Password</string>
+    <string name="label_photo_question">Add question to photo</string>
+    <string name="ok">Ok</string>
 
 </resources>
