--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,8 +26,10 @@
     <string name="hint_comment">Write comment</string>
     <string name="hint_photo_question">What is this?</string>
     
-    <string name="ok">OK</string>
+    <string name="toast_mask">&#x2193; Touch and move to explore</string>
+    <string name="toast_mask_preview">&#x2193; Touch and move preview</string>
     
+    <string name="ok">OK</string>
     <string name="default_description"></string>
 
 </resources>
