--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="message_loadingphoto">Loading photo&#8230;</string>
     <string name="message_login">Logging in&#8230;</string>
     <string name="message_signup">Signing up&#8230;</string>
+    <string name="message_reset_password_sent">Follow the instructions\nsent to your email.</string>
     <string name="message_uploadingphoto">Uploading photo&#8230;</string>
     <string name="message_photo_question">Ask a question with your photo e.g. what is this?</string>
         
@@ -27,11 +28,16 @@
     <string name="hint_password">Password</string>
     <string name="hint_comment">Write comment</string>
     <string name="hint_photo_question">What is this?</string>
+        <string name="hint_email">Email</string>
+    <string name="hint_reset_password_email">Enter your email</string>
     
     <string name="toast_mask">&#x2193; Touch and move to explore</string>
     <string name="toast_mask_preview">&#x2193; Touch and move preview</string>
     
     <string name="ok">OK</string>
     <string name="default_description"></string>
+    <string name="label_goto_forgot_password">Forgot your password?</string>
+    <string name="buttonlabel_reset_password">Request rest link</string>
+    <string name="label_reset_password_welcome">Forgot your password? </string>
     
 </resources>
